--- a/desktop/src/main/resources/org/example/desktop/login-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/login-view.fxml
@@ -1,60 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.LoginController">
+<HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" stylesheets="@estilos/login-register.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.LoginController">
     <children>
-        <AnchorPane prefHeight="400.0" prefWidth="220.0" style="-fx-background-color: #3e4440;">
+        <AnchorPane prefHeight="400.0" prefWidth="220.0" styleClass="left-panel">
             <children>
-                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="30.0" layoutY="41.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="58.0" layoutY="51.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@images/siaj-logo.png" />
                     </image>
                 </ImageView>
-                <Label layoutX="8.0" layoutY="200.0" text="SIAJ INVENTARIOS" textFill="#04dd2c">
-                    <font>
-                        <Font name="Yu Gothic Bold" size="20.0" />
-                    </font>
-                </Label>
-                <Separator layoutY="237.0" prefHeight="8.0" prefWidth="203.0" />
-                <Button fx:id="registrarse" layoutX="42.0" layoutY="292.0" mnemonicParsing="false" onAction="#irARegistro" prefHeight="27.0" prefWidth="122.0" style="-fx-border-color: #38a169; -fx-background-color: #22543d;" text="Registrarse" textFill="WHITE">
-                    <font>
-                        <Font name="Segoe UI Bold" size="12.0" />
-                    </font>
-                </Button>
-                <Label layoutX="26.0" layoutY="265.0" text="¿No tienes una cuenta?" textFill="WHITE">
-                    <font>
-                        <Font name="Segoe UI" size="15.0" />
-                    </font></Label>
+                <Label layoutX="33.0" layoutY="215.0" styleClass="title-label" text="SIAJ INVENTARIOS" />
+                <Button fx:id="registrarse" layoutX="72.0" layoutY="311.0" mnemonicParsing="false" onAction="#irARegistro" prefHeight="27.0" prefWidth="122.0" text="Registrarse" textFill="WHITE">
+               <styleClass>
+                  <String fx:value="secondary-button" />
+                  <String fx:value="field-label" />
+               </styleClass></Button>
+                <Label layoutX="66.0" layoutY="282.0" styleClass="info-text" text="¿No tienes una cuenta?" />
             </children>
         </AnchorPane>
-        <AnchorPane prefHeight="400.0" prefWidth="522.0" style="-fx-background-color: #656b67;">
+        <AnchorPane prefHeight="400.0" prefWidth="522.0" styleClass="right-panel">
             <children>
                 <ImageView fitHeight="120.0" fitWidth="115.0" layoutX="140.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@images/siaj-logo.png" />
                     </image>
                 </ImageView>
-                <Button fx:id="iniciarSesion" layoutX="111.0" layoutY="291.0" mnemonicParsing="false" onAction="#irLogin" prefHeight="40.0" prefWidth="173.0" style="-fx-border-color: #38a169; -fx-background-color: #22543d;" text="Iniciar Sesión" textFill="WHITE">
-                    <font>
-                        <Font name="Segoe UI Bold" size="16.0" />
-                    </font>
-                </Button>
-                <Label layoutX="38.0" layoutY="144.0" text="Email" textFill="WHITE">
-                    <font>
-                        <Font name="Segoe UI Bold" size="16.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="email" layoutX="38.0" layoutY="167.0" prefHeight="25.0" prefWidth="320.0" style="-fx-background-color: #8ba288; -fx-border-color: #38a169;" />
-                <Label layoutX="39.0" layoutY="207.0" text="Password" textFill="WHITE">
-                    <font>
-                        <Font name="Segoe UI Bold" size="16.0" />
-                    </font>
-                </Label>
-                <TextField fx:id="password" layoutX="39.0" layoutY="230.0" prefHeight="25.0" prefWidth="320.0" style="-fx-background-color: #8ba288; -fx-border-color: #38a169;" />
+                <Button fx:id="iniciarSesion" layoutX="119.0" layoutY="327.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="40.0" prefWidth="173.0" text="Iniciar Sesión" textFill="WHITE">
+               <styleClass>
+                  <String fx:value="primary-button" />
+                  <String fx:value="field-label" />
+               </styleClass></Button>
+                <Label layoutX="39.0" layoutY="170.0" styleClass="field-label" text="Email" />
+                <TextField fx:id="email" layoutX="40.0" layoutY="195.0" prefHeight="25.0" prefWidth="320.0" />
+                <Label layoutX="44.0" layoutY="238.0" styleClass="field-label" text="Password" />
+                <TextField fx:id="password" layoutX="40.0" layoutY="263.0" prefHeight="25.0" prefWidth="320.0" styleClass="password-field" />
             </children></AnchorPane>
     </children>
 </HBox>
