--- a/desktop/src/main/resources/org/example/desktop/productos-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/productos-view.fxml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SplitMenuButton?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="org.example.desktop.ProductosView"
-            prefHeight="400.0" prefWidth="600.0" >
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
-</AnchorPane>
+    <left>
+        <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
+    </left>
+
+
+    <right>
+        <AnchorPane prefHeight="800.0" prefWidth="700.0" BorderPane.alignment="CENTER">
+         <children>
+            <TableView layoutX="10.0" layoutY="66.0" prefHeight="720.0" prefWidth="680.0">
+              <columns>
+                  <TableColumn prefWidth="90.0" text="SKU" />
+                <TableColumn prefWidth="157.0" text="PRODUCTO" />
+                  <TableColumn prefWidth="135.0" text="CATEOGORIAS" />
+                  <TableColumn prefWidth="94.0" text="PRECIO" />
+                  <TableColumn prefWidth="61.0" text="STOCK" />
+                  <TableColumn prefWidth="141.0" text="PROVEEDOR" />
+              </columns>
+            </TableView>
+         </children></AnchorPane>
+    </right>
+   <stylesheets>
+      <URL value="@estilos/estilos-globales.css" />
+      <URL value="@estilos/tabla.css" />
+   </stylesheets>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="167.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button layoutX="14.0" layoutY="567.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
+            <Button layoutX="163.0" layoutY="567.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
+            <Button layoutX="163.0" layoutY="629.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
+            <TextField layoutX="100.0" layoutY="409.0" />
+            <SplitMenuButton layoutX="100.0" layoutY="457.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="174.0" text="Categorias">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </SplitMenuButton>
+            <SplitMenuButton layoutX="100.0" layoutY="498.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="174.0" text="Estado">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+                  <MenuItem mnemonicParsing="false" text="Action 2" />
+               </items>
+            </SplitMenuButton>
+            <TextField layoutX="100.0" layoutY="363.0" />
+            <TextField layoutX="100.0" layoutY="318.0" />
+            <TextField layoutX="100.0" layoutY="272.0" />
+         </children>
+      </AnchorPane>
+   </center>
+</BorderPane>
