--- a/desktop/src/main/resources/org/example/desktop/productos-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/productos-view.fxml
@@ -2,6 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.SplitMenuButton?>
 <?import javafx.scene.control.TableColumn?>
@@ -9,6 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
 
@@ -20,14 +22,15 @@
     <right>
         <AnchorPane prefHeight="800.0" prefWidth="700.0" BorderPane.alignment="CENTER">
          <children>
+            <TextField layoutX="10.0" layoutY="14.0" prefHeight="21.0" prefWidth="225.0" promptText="Buscar Producto..." />
             <TableView layoutX="10.0" layoutY="66.0" prefHeight="720.0" prefWidth="680.0">
               <columns>
-                  <TableColumn prefWidth="90.0" text="SKU" />
-                <TableColumn prefWidth="157.0" text="PRODUCTO" />
-                  <TableColumn prefWidth="135.0" text="CATEOGORIAS" />
-                  <TableColumn prefWidth="94.0" text="PRECIO" />
-                  <TableColumn prefWidth="61.0" text="STOCK" />
-                  <TableColumn prefWidth="141.0" text="PROVEEDOR" />
+                  <TableColumn prefWidth="68.0" text="SKU" />
+                <TableColumn prefWidth="142.0" text="PRODUCTO" />
+                  <TableColumn prefWidth="103.0" text="STOCK" />
+                  <TableColumn prefWidth="109.0" text="PRECIO" />
+                  <TableColumn text="ESTADO" />
+                  <TableColumn prefWidth="176.0" text="PROVEEDORES" />
               </columns>
             </TableView>
          </children></AnchorPane>
@@ -39,25 +42,66 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="167.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="14.0" layoutY="567.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
-            <Button layoutX="163.0" layoutY="567.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
-            <Button layoutX="163.0" layoutY="629.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
-            <TextField layoutX="100.0" layoutY="409.0" />
-            <SplitMenuButton layoutX="100.0" layoutY="457.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="174.0" text="Categorias">
+            <Button layoutX="14.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
+            <Button layoutX="163.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
+            <Button layoutX="163.0" layoutY="654.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
+            <TextField layoutX="127.0" layoutY="371.0" prefHeight="38.0" prefWidth="150.0" promptText="Precio" />
+            <SplitMenuButton layoutX="126.0" layoutY="419.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Categorias">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </SplitMenuButton>
-            <SplitMenuButton layoutX="100.0" layoutY="498.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="174.0" text="Estado">
+            <SplitMenuButton layoutX="126.0" layoutY="460.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Estado">
                <items>
                   <MenuItem mnemonicParsing="false" text="Action 1" />
                   <MenuItem mnemonicParsing="false" text="Action 2" />
                </items>
             </SplitMenuButton>
-            <TextField layoutX="100.0" layoutY="363.0" />
-            <TextField layoutX="100.0" layoutY="318.0" />
-            <TextField layoutX="100.0" layoutY="272.0" />
+            <TextField layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Stock" />
+            <TextField layoutX="127.0" layoutY="280.0" prefHeight="38.0" prefWidth="150.0" promptText="Nombre producto" />
+            <TextField layoutX="127.0" layoutY="234.0" prefHeight="38.0" prefWidth="150.0" promptText="SKU" />
+            <SplitMenuButton layoutX="127.0" layoutY="501.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Proveedor">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Action 1" />
+                  <MenuItem mnemonicParsing="false" text="Action 2" />
+               </items>
+            </SplitMenuButton>
+            <Label layoutX="12.0" layoutY="245.0" text="SKU" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="289.0" text="Nombre Producto" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="8.0" layoutY="334.0" text="Stock" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="6.0" layoutY="380.0" text="Precio" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="7.0" layoutY="424.0" text="Categorias" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="9.0" layoutY="465.0" text="Estado" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="7.0" layoutY="511.0" text="Proveedor" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
          </children>
       </AnchorPane>
    </center>
