--- a/desktop/src/main/resources/org/example/desktop/productos-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/productos-view.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="org.example.desktop.controller.ProductoController">
 
     <left>
         <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
@@ -22,19 +22,20 @@
     <right>
         <AnchorPane prefHeight="800.0" prefWidth="700.0" BorderPane.alignment="CENTER">
          <children>
-            <TextField layoutX="10.0" layoutY="14.0" prefHeight="21.0" prefWidth="225.0" promptText="Buscar Producto..." />
-            <TableView layoutX="10.0" layoutY="66.0" prefHeight="720.0" prefWidth="680.0">
+            <TextField fx:id="txtBuscarProducto" layoutX="10.0" layoutY="14.0" prefHeight="21.0" prefWidth="225.0" promptText="Buscar Producto..." />
+            <TableView fx:id="tablaProductos" layoutX="10.0" layoutY="66.0" prefHeight="720.0" prefWidth="680.0">
               <columns>
-                  <TableColumn prefWidth="68.0" text="SKU" />
-                <TableColumn prefWidth="142.0" text="PRODUCTO" />
-                  <TableColumn prefWidth="103.0" text="STOCK" />
-                  <TableColumn prefWidth="109.0" text="PRECIO" />
-                  <TableColumn text="ESTADO" />
-                  <TableColumn prefWidth="176.0" text="PROVEEDORES" />
+                  <TableColumn fx:id="skuColumn" prefWidth="68.0" text="SKU" />
+                  <TableColumn fx:id="nombreColumn" prefWidth="142.0" text="PRODUCTO" />
+                  <TableColumn fx:id="stockColumn" prefWidth="103.0" text="STOCK" />
+                  <TableColumn fx:id="precioColumn" prefWidth="109.0" text="PRECIO" />
+                  <TableColumn fx:id="estadoColumn" text="ESTADO" />
+                  <TableColumn fx:id="proveedorColumn" prefWidth="176.0" text="PROVEEDORES" />
               </columns>
             </TableView>
          </children></AnchorPane>
     </right>
+
    <stylesheets>
       <URL value="@estilos/estilos-globales.css" />
       <URL value="@estilos/tabla.css" />
@@ -42,10 +43,11 @@
    <center>
       <AnchorPane prefHeight="200.0" prefWidth="167.0" BorderPane.alignment="CENTER">
          <children>
-            <Button layoutX="14.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
-            <Button layoutX="163.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
-            <Button layoutX="163.0" layoutY="654.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
-            <TextField layoutX="127.0" layoutY="371.0" prefHeight="38.0" prefWidth="150.0" promptText="Precio" />
+             <!-- ID PARA BOTONES -->
+            <Button fx:id="agregar" layoutX="14.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
+            <Button fx:id="actualizar" layoutX="163.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
+            <Button fx:id="desactivar" layoutX="163.0" layoutY="654.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
+            <TextField fx:id="" layoutX="127.0" layoutY="371.0" prefHeight="38.0" prefWidth="150.0" promptText="Precio" />
             <SplitMenuButton layoutX="126.0" layoutY="419.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Categorias">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
@@ -58,7 +60,8 @@
                   <MenuItem mnemonicParsing="false" text="Action 2" />
                </items>
             </SplitMenuButton>
-            <TextField layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Stock" />
+             <!-- ID PARA ingreso datos y menu items -->
+             <TextField layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Stock" />
             <TextField layoutX="127.0" layoutY="280.0" prefHeight="38.0" prefWidth="150.0" promptText="Nombre producto" />
             <TextField layoutX="127.0" layoutY="234.0" prefHeight="38.0" prefWidth="150.0" promptText="SKU" />
             <SplitMenuButton layoutX="127.0" layoutY="501.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Proveedor">
