--- a/desktop/src/main/resources/org/example/desktop/productos-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/productos-view.fxml
@@ -47,24 +47,24 @@
             <Button fx:id="agregar" layoutX="14.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Agregar" />
             <Button fx:id="actualizar" layoutX="163.0" layoutY="593.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Actualizar" />
             <Button fx:id="desactivar" layoutX="163.0" layoutY="654.0" mnemonicParsing="false" prefHeight="46.0" prefWidth="112.0" text="Desactivar" />
-            <TextField fx:id="" layoutX="127.0" layoutY="371.0" prefHeight="38.0" prefWidth="150.0" promptText="Precio" />
-            <SplitMenuButton layoutX="126.0" layoutY="419.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Categorias">
+            <TextField fx:id="txtPrecio" layoutX="127.0" layoutY="371.0" prefHeight="38.0" prefWidth="150.0" promptText="Precio" />
+            <SplitMenuButton fx:id="menuCategorias" layoutX="126.0" layoutY="419.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Categorias">
               <items>
                 <MenuItem mnemonicParsing="false" text="Action 1" />
                 <MenuItem mnemonicParsing="false" text="Action 2" />
               </items>
             </SplitMenuButton>
-            <SplitMenuButton layoutX="126.0" layoutY="460.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Estado">
+            <SplitMenuButton  fx:id="menuEstado" layoutX="126.0" layoutY="460.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Estado">
                <items>
                   <MenuItem mnemonicParsing="false" text="Action 1" />
                   <MenuItem mnemonicParsing="false" text="Action 2" />
                </items>
             </SplitMenuButton>
              <!-- ID PARA ingreso datos y menu items -->
-             <TextField layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Stock" />
-            <TextField layoutX="127.0" layoutY="280.0" prefHeight="38.0" prefWidth="150.0" promptText="Nombre producto" />
-            <TextField layoutX="127.0" layoutY="234.0" prefHeight="38.0" prefWidth="150.0" promptText="SKU" />
-            <SplitMenuButton layoutX="127.0" layoutY="501.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Proveedor">
+             <TextField fx:id="txtStock" layoutX="127.0" layoutY="325.0" prefHeight="38.0" prefWidth="150.0" promptText="Stock" />
+            <TextField fx:id="txtNombre" layoutX="127.0" layoutY="280.0" prefHeight="38.0" prefWidth="150.0" promptText="Nombre producto" />
+            <TextField fx:id="txtSku" layoutX="127.0" layoutY="234.0" prefHeight="38.0" prefWidth="150.0" promptText="SKU" />
+            <SplitMenuButton  fx:id="menuProveedor" layoutX="127.0" layoutY="501.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" text="Proveedor">
                <items>
                   <MenuItem mnemonicParsing="false" text="Action 1" />
                   <MenuItem mnemonicParsing="false" text="Action 2" />
