arreglos en el front

--- a/desktop/src/main/resources/org/example/desktop/side-menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/side-menu-view.fxml
@@ -7,78 +7,86 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<VBox prefHeight="600.0" prefWidth="210.0" spacing="10" styleClass="side-menu"
-      stylesheets="@estilos/estilos-globales.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="600.0" prefWidth="210.0" spacing="10" styleClass="side-menu" stylesheets="@estilos/estilos-globales.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1">
 
     <padding>
-        <Insets bottom="15" left="15" right="15" top="15"/>
+        <Insets bottom="15" left="15" right="15" top="15" />
     </padding>
 
-    <Text fill="#38b536" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading-2" text="SIAJ INVENTARIOS"/>
+    <Text fill="#38b536" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="heading-2" text="SIAJ INVENTARIOS" />
 
     <ImageView fx:id="userIcon" fitHeight="50" fitWidth="50">
         <image>
-            <Image url="@images/siaj-logo.png"/>
+            <Image url="@images/siaj-logo.png" />
         </image>
     </ImageView>
 
-    <Separator/>
+    <Separator />
 
     <Button fx:id="dashboardBtn" maxWidth="Infinity" text="Inicio">
         <styleClass>
-            <String fx:value="button-primary"/>
-            <String fx:value="button"/>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
         </styleClass>
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
 
     <Button fx:id="productsBtn" maxWidth="Infinity" text="Productos">
         <styleClass>
-            <String fx:value="button-primary"/>
-            <String fx:value="button"/>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
         </styleClass>
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
 
     <Button fx:id="ordersBtn" maxWidth="Infinity" text="Proveedores">
         <styleClass>
-            <String fx:value="button-primary"/>
-            <String fx:value="button"/>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
         </styleClass>
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
 
     <Button fx:id="reportsBtn" maxWidth="Infinity" text="Reportes/Graficos">
         <styleClass>
-            <String fx:value="button-primary"/>
-            <String fx:value="button"/>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
         </styleClass>
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
 
-    <Button fx:id="settingsBtn" maxWidth="Infinity" text="Ventas">
+    <Button fx:id="settingsBtn" maxWidth="Infinity" text="Punto de VENTA">
         <styleClass>
-            <String fx:value="button-primary"/>
-            <String fx:value="button"/>
+            <String fx:value="button-primary" />
+            <String fx:value="button" />
         </styleClass>
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
+   <Button fx:id="settingsBtn1" layoutX="25.0" layoutY="307.0" maxWidth="Infinity" text="Usuarios">
+      <styleClass>
+         <String fx:value="button-primary" />
+         <String fx:value="button" />
+      </styleClass>
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font>
+   </Button>
 
-    <Region VBox.vgrow="ALWAYS"/>
+    <Region prefHeight="185.0" prefWidth="180.0" VBox.vgrow="ALWAYS" />
 
-    <Button fx:id="logoutBtn" maxWidth="Infinity" text="Cerrar Sesión" style="-fx-background-color: #e74c3c; -fx-text-fill: white;">
+    <Button fx:id="logoutBtn" maxWidth="Infinity" style="-fx-background-color: #e74c3c; -fx-text-fill: white;" text="Cerrar Sesión">
         <font>
-            <Font name="System Bold" size="12.0"/>
+            <Font name="System Bold" size="12.0" />
         </font>
     </Button>
 
