--- a/desktop/src/main/resources/org/example/desktop/menu-view.fxml
+++ b/desktop/src/main/resources/org/example/desktop/menu-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.MenuController">
+<BorderPane styleClass="main-container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.desktop.controller.MenuController">
 
     <left>
         <fx:include fx:id="sidebar" source="side-menu-view.fxml" />
@@ -13,12 +13,28 @@
 
     <stylesheets>
         <URL value="@estilos/estilos-globales.css" />
-        <URL value="@estilos/tabla.css" />
+        <URL value="@estilos/menu-principal.css" />
     </stylesheets>
    <right>
-      <AnchorPane prefHeight="790.0" prefWidth="999.0" BorderPane.alignment="CENTER">
+      <AnchorPane  styleClass="content-pane"  prefHeight="790.0" prefWidth="999.0" stylesheets="@estilos/menu-principal.css" BorderPane.alignment="CENTER">
          <children>
-             <Button layoutX="81.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #2E7D32; -fx-background-radius: 8px;">
+             <HBox layoutX="81.0" layoutY="85.0" alignment="CENTER_LEFT" spacing="15">
+                 <children>
+                     <ImageView fitHeight="65.0" fitWidth="87.0" layoutX="81.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
+                         <image>
+                             <Image url="@images/ion--home.png" />
+                         </image>
+                     </ImageView>
+                     <VBox>
+                         <children>
+                             <Label styleClass="welcome-title" text="Bienvenido, (user)"/>
+                             <Label styleClass="welcome-subtitle" text="Seleccione modulo" />
+                         </children>
+                     </VBox>
+                 </children>
+             </HBox>
+
+             <Button fx:id="bntPuntoVenta" layoutX="81.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, punto-venta">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <children>
@@ -27,26 +43,12 @@
                                      <Image url="@images/majesticons--shopping-cart.png" />
                                  </image>
                              </ImageView>
-                             <Label style="-fx-font-weight: bold; -fx-font-size: 14px;" text="Punto de Venta" textFill="WHITE" />
+                             <Label styleClass="button-text" text="Punto de Venta" textFill="WHITE" />
                          </children>
                      </VBox>
                  </graphic>
              </Button>
-             <Button layoutX="510.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #8D4E2A; -fx-background-radius: 8px;">
-                 <graphic>
-                     <VBox alignment="CENTER" spacing="10">
-                         <children>
-                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                     <Image url="@images/weui--contacts-filled.png" />
-                                 </image>
-                             </ImageView>
-                             <Label style="-fx-font-weight: bold; -fx-font-size: 14px;" text="Proveedores" textFill="WHITE" />
-                         </children>
-                     </VBox>
-                 </graphic>
-             </Button>
-             <Button layoutX="295.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #1565C0; -fx-background-radius: 8px;">
+             <Button fx:id="btnInventario" layoutX="295.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, inventario">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <children>
@@ -55,12 +57,26 @@
                                      <Image url="@images/mage--package-box-fill.png" />
                                  </image>
                              </ImageView>
-                             <Label style="-fx-font-weight: bold; -fx-font-size: 14px;" text="Inventario/Productos" textFill="WHITE" />
+                             <Label styleClass="button-text" text="Inventario/Productos" textFill="WHITE" />
                          </children>
                      </VBox>
                  </graphic>
              </Button>
-             <Button layoutX="724.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #F57C00; -fx-background-radius: 8px;">
+             <Button fx:id="btnProveedores" layoutX="510.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, proveedores">
+                 <graphic>
+                     <VBox alignment="CENTER" spacing="10">
+                         <children>
+                             <ImageView fitHeight="80.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                     <Image url="@images/weui--contacts-filled.png" />
+                                 </image>
+                             </ImageView>
+                             <Label styleClass="button-text" text="Proveedores" textFill="WHITE" />
+                         </children>
+                     </VBox>
+                 </graphic>
+             </Button>
+             <Button layoutX="724.0" layoutY="200.0" mnemonicParsing="false" prefHeight="200.0" prefWidth="200.0" styleClass="menu-button, productos">
                  <graphic>
                      <VBox alignment="CENTER" spacing="10">
                          <children>
@@ -69,19 +85,58 @@
                                      <Image url="@images/icomoon-free--stats-bars.png" />
                                  </image>
                              </ImageView>
-                             <Label style="-fx-font-weight: bold; -fx-font-size: 14px;" text="Gráfico de Inventario" textFill="WHITE" />
+                             <Label styleClass="button-text" text="Gráfico de Inventario" textFill="WHITE" />
                          </children>
                      </VBox>
                  </graphic>
              </Button>
-            <Label layoutX="81.0" layoutY="466.0" text="Informacion General" />
-            <Label layoutX="510.0" layoutY="466.0" text="Ultimos movimientos" />
-            <ImageView fitHeight="65.0" fitWidth="87.0" layoutX="81.0" layoutY="85.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/ion--home.png" />
-               </image>
-            </ImageView>
-            <Label layoutX="152.0" layoutY="98.0" text="Bienvenido, " />
+
+
+             <VBox layoutX="81.0" layoutY="450.0" prefWidth="400.0" styleClass="info-section">
+                 <children>
+                    <Label styleClass="section-header" text="Información General"/>
+                     <VBox styleClass="info-content" spacing="15">
+                         <children>
+                             <HBox styleClass="info-item" alignment="CENTER_LEFT" spacing="15">
+                                 <children>
+                                     <Label styleClass="info-icon, income-icon" text="💰"/>
+                                     <VBox spacing="2">
+                                         <children>
+                                             <Label styleClass="info-label" text="Ingresos hoy"/>
+                                             <Label styleClass="info-value" text="(ingresos fecha)"/>
+                                         </children>
+                                     </VBox>
+                                 </children>
+                             </HBox>
+                             <HBox styleClass="info-item" alignment="CENTER_LEFT" spacing="15">
+                                 <children>
+                                     <Label styleClass="info-icon, sales-icon" text="💰"/>
+                                     <VBox spacing="2">
+                                         <children>
+                                             <Label styleClass="info-label" text="Ventas hoy (fecha)"/>
+                                             <Label styleClass="info-value" text="(numero de ventas)"/>
+                                         </children>
+                                     </VBox>
+                                 </children>
+                             </HBox>
+                         </children>
+                     </VBox>
+                 </children>
+             </VBox>
+
+             <VBox layoutX="510.0" layoutY="450.0" prefWidth="400.0" styleClass="info-section">
+                 <children>
+                     <Label styleClass="section-header" text="Últimos movimientos"/>
+                     <VBox styleClass="info-content" spacing="10">
+                         <children>
+                             <Label styleClass="empty-message" text="No hay movimientos recientes"/>
+
+                         </children>
+                     </VBox>
+                 </children>
+
+             </VBox>
+
          </children>
       </AnchorPane>
    </right>
